# Mac_Config

./: .bash_profile  .bashrc  .readthedocs.yaml  .tmux.conf  .zprofile  .zshrc  README.rst
.config/bash_scripts/: .bash_aliases  build.sh  compile.sh  create_dir.sh  create_file.sh  create_project_tmux.sh  run_tests.sh  unit_tests.sh
.config/c++_files/: additional_file.hpp
.config/c_files/: CMake1.txt  CMaketest.txt  additional_file.h  test.c  test.h  unit_test.c
.config/coc/: memos.json  suggest.txt
.config/gh/: hosts.yml
.config/nvim/: init.vim
.config/nvim/after/plugin/: colors.lua  lsp.lua  treesitter.lua
.config/nvim/lua/core/: packer.lua  remap.lua  set.lua
.config/nvim/plugin/: packer_compiled.lua
.config/py_files/: .flake8  .readthedocs.yaml  README.rst  __init__.py  conftest.py  main.py  pyproject.toml  test.py
.config/zsh_scripts/: .zsh_aliases  create_dir.zsh  create_file.zsh  create_project_tmux.zsh
Code_Dev/C/: README.rst
Code_Dev/C++/: README.rst
Code_Dev/Keys/: README.rst
Code_Dev/Python/: README.rst
Troubleshooting/: Cron.rst  Fail2ban.rst  MacUpdate.rst  git.rst  rsync.rst  ssh.rst  usb.rst
docs/: requirements.txt
docs/source/: Post.rst  conf.py  index.rst
