
classifiers = [
	"Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
	"Operating System :: POSIX :: Linux",
]

[tool.black]
line-length = 90
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.egggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black
  | lib2to3
  | tests/data
  | profiling
)/
'''

[tool.tox]
legacy_tox_ini = """
	[tox]
	env_list = py310, mypy, flake8, coverage, black

	[testenv]
	description = Conduct tests with pytest
	deps = pytest
	commands = pytest tests

	[testenv:mypy]
	deps = mypy
	commandds = mypy pyproject

	[testenv:flake8]
	deps = flake8
	commands = flake8 pyproject

	[testenv:black]
	deps = black
	commands black pyproject

	[testenv:coverage]
	deps = pytest-cov
	commands = 
		pytest --cov --cov-report term-missing --cov-report html --cov-append --cov-context=test --cov-fail-under=100 {posargs}
"""

[tool.mypy]
exclude = ["docs", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.init_options]
testpaths = ["tests"]
console_output_style = "progress"

[project.urls]
"Homepage" = "https://github.com/Jon-Webb-79/pyproject"
